[package]
name = "bind9-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dns-update = "0.5.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
stable-eyre = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
