[package]
name = "bind9-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
hickory-net = { version = "0.26", default-features = false, features = ["dnssec-ring", "tokio"] }
hickory-proto = { version = "0.26", default-features = false, features = ["std", "dnssec-ring"] }
ring = "0.17"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
stable-eyre = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }